overflow fix

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 20vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
